# polaris-backend

./: .env.example  .gitignore  .gitingore  conftest.py  docker-compose.yml  main.py  pyproject.toml  readme.md  requirements.txt  requirment.txt
.github/: pull_requst_templat.md
apimaker-project/: .gitignore  README.md  agent-sdk-persistent-session.md  pyproject.toml
apimaker-project/examples/: api_client.py  direct_call.py
apimaker-project/src/apimaker/: __init__.py  api.py  errors.py  service.py  types.py
apimaker-project/src/apimaker/providers/: base.py  claude.py  codex.py  gemini.py
apimaker-project/tests/: __init__.py  test_api.py  test_claude_provider.py  test_codex_provider.py  test_gemini_provider.py  test_service.py
config/: __init__.py  admin.py  db.py  entities.json  entities.py  glossary.json  glossary.py  graphrag.py  llm.py  relations.json  relations.py
core/: digest.py  graph.py  news.py  serialize.py  state.py
data/: vocab.json
docs/: graphrag.html  graphrag_backend_revision_plan.html  graphrag_backend_revision_plan_standalone.html  graphrag_presentation.html
graphrag/: __init__.py  apimaker_client.py  chain_planner.py  cypher_executor.py  cypher_generator.py  global_search.py  graph_mode.py  llm_planner.py  matcher.py  neo4j_client.py  node.py  plan_schema.py  planner.py  ppr.py  query_shape.py  router.py  schema.py  search.py  structured_executor.py  text2cypher.py  traverse.py
migrations/: 001_pipeline_tables.sql  002_chat_tables.sql
nodes/: memory.py  rag.py  render.py  router.py
pipeline_scripts/: .gitignore  README.md  _polaris_marker.py  cleanup_raw.py  fetch_dart.py  run_dart_to_local_extract.ps1
routers/: admin.py
(+178 files in other folders)
