[project]
name = "apimaker"
version = "0.1.0"
description = "Development-only Claude/Codex persistent session wrappers"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "httpx>=0.27.0",
    "pydantic>=2.8.0",
    "uvicorn[standard]>=0.30.0",
]

[project.optional-dependencies]
claude = [
    "claude-agent-sdk>=0.2.94",
]
codex-sdk = [
    "openai-codex",
]
providers = [
    "claude-agent-sdk>=0.2.94",
    "openai-codex",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/apimaker"]

[tool.pytest.ini_options]
testpaths = ["tests"]
